# glang

./: .gitattributes  .gitignore  CMakeLists.txt  Preload.cmake  README.md
examples/: hello_world.g
include/base/: alloc.h  assert.h  format.h  itoa.h  macros.h  new.h  platform.h  string.h  types.h  vec.h
include/cli/: command.h  emit.h  help.h  option.h  parse_command.h  version.h
include/cli/option/: compile.h  init.h  install.h  run.h
include/command/: build.h  compile.h  cpp.h  init.h  run.h  test.h
include/core/g/: analysis.h  ast.h  checked.h  error.h  ir.h  package.h  parser.h  precompile.h  preparser.h  scanner.h  token.h  visibility.h  warning.h
include/core/g/ast/: data_type.h  decl.h  expr.h  field.h  field_object.h  generic_param.h  impl_param.h  inherit_param.h  pattern.h  stmt.h  variant.h
include/core/g/ast/body/: class.h  enum_object.h  fun.h  record_object.h  trait.h
include/core/g/ast/decl/: alias.h  attribute.h  class.h  constant.h  enum.h  enum_object.h  fun.h  method.h  object.h  prototype.h  record.h  record_object.h  trait.h  type.h
include/core/shared/: cursor.h  diagnostic.h  file.h  location.h  source.h
src/base/: alloc.c  format.c  itoa.c  string.c  vec.c
src/cli/: option.c  parse_command.c
src/cli/option/: build.c  cc.c  compile.c  init.c  install.c  run.c  to.c
src/command/run/: run.c
src/core/g/: analysis.c  token.c
test/: main.g
